installs/default/change-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: proxy-kong
  name: proxy-kong
  namespace: kong
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: proxy
