installs/default/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kong-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  labels:
    traffic-type: internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api-admin.hl.ancalagon.black`)
      priority: 10
      services:
        - name: kong-admin
          port: 8444
          scheme: https
  tls:
    certResolver: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kong-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  labels:
    traffic-type: internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.hl.ancalagon.black`)
      priority: 10
      services:
        - name: kong-proxy
          port: 80
  tls:
    certResolver: default
